--- a/templates/footer.html
+++ b/templates/footer.html
@@ -76,7 +76,7 @@
         <div class="col-lg-4 mb-4">
           <div class="footer-brand">
             <h3 class="fw-bold mb-3">
-              <i class="fas fa-handshake me-2 text-white"></i> In Wilson We Trust
+              <i class="fas fa-handshake me-2 text-white"></i> In Wynston We Trust
             </h3>
             <p class="text-white-50">Transforming customer experiences across East Africa through innovative solutions and training.</p>
             
@@ -109,8 +109,6 @@
             <li class="mb-2"><a href="#" class="footer-link">About Us</a></li>
             <li class="mb-2"><a href="#" class="footer-link">Our Services</a></li>
             <li class="mb-2"><a href="#" class="footer-link">Training Programs</a></li>
-            <li class="mb-2"><a href="#" class="footer-link">Resources</a></li>
-            <li class="mb-2"><a href="#" class="footer-link">Blog</a></li>
           </ul>
         </div>
         
@@ -118,11 +116,9 @@
         <div class="col-lg-2 col-md-4 mb-4">
           <h5 class="footer-heading mb-3">Resources</h5>
           <ul class="list-unstyled">
-            <li class="mb-2"><a href="#" class="footer-link">Free eBooks</a></li>
+            <li class="mb-2"><a href="#" class="footer-link">eBooks</a></li>
             <li class="mb-2"><a href="#" class="footer-link">Case Studies</a></li>
-            <li class="mb-2"><a href="#" class="footer-link">Webinars</a></li>
-            <li class="mb-2"><a href="#" class="footer-link">Templates</a></li>
-            <li class="mb-2"><a href="#" class="footer-link">Research Papers</a></li>
+            <li class="mb-2"><a href="#" class="footer-link">Webinars</a></li
             <li class="mb-2"><a href="#" class="footer-link">FAQ</a></li>
           </ul>
         </div>
@@ -136,7 +132,7 @@
               <i class="fas fa-envelope mt-1 me-3 text-primary"></i>
               <div>
                 <h6 class="small mb-0">Email</h6>
-                <a href="mailto:info@puttingcustomersfirst.co.ke" class="footer-link">info@inwilsonwetrust.com</a>
+                <a href="mailto:info@inwynstonwetrust.com" class="footer-link">info@inwynstonwetrust.com</a>
               </div>
             </div>
             
@@ -144,7 +140,7 @@
               <i class="fas fa-phone-alt mt-1 me-3 text-primary"></i>
               <div>
                 <h6 class="small mb-0">Phone</h6>
-                <a href="tel:+254700000000" class="footer-link">+254 700 000000</a>
+                <a href="tel:+1 (401) 572-6515" class="footer-link">+1 (401) 572-6515</a>
               </div>
             </div>
             
@@ -197,7 +193,7 @@
       <!-- Copyright & Legal -->
       <div class="row mt-5">
         <div class="col-md-6 text-center text-md-start">
-          <p class="small text-white-50 mb-0">&copy; 2023 Putting Customers First. All rights reserved.</p>
+          <p class="small text-white-50 mb-0">&copy; 2025 @ In Wynston We Trust. All rights reserved.</p>
         </div>
         <div class="col-md-6 text-center text-md-end">
           <ul class="list-inline small mb-0">
