--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load content_containers %}
 {% block title %}About Wynston A. Wilson | Putting Customers First{% endblock %}
 
 {% block extra_css %}
@@ -100,6 +100,8 @@
       <a href="#contact" class="btn">Get in Touch</a>
     </div>
   </section>
+
+{% render_content_container 'about' %}
 
   <!-- Methodology Section -->
   <section class="methodology-section">
